@startuml
class FileComments {
file : string
+ accept( CommentConsumer)
}

class Comments {
+ accept( CommentConsumer)
}

Comments "1.." o-- FileComments

class LineComment {
comment : string
line : string
author : string
...
}

interface CommentConsumer{
+consume(string file, string line, string comment)
}

class BitBucketCommentUploader{
}
BitBucketCommentUploader --|> CommentConsumer

FileComments "1.." o-- LineComment
@enduml